Add default keyword

--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,21 @@ body {
     margin: 0 auto;
 }
 
+@media (max-width: 768px) {
+    .App {
+        padding: 0;
+
+    }
+
+
+}
+
 .App header {
     margin: 30px 0;
 }
 
 .logo {
-    max-width: 100px;
+    max-width: 150px;
     display: block;
     margin: 0 auto;
 }
